--- a/client/src/pages/ChatAI/ChatAI.css
+++ b/client/src/pages/ChatAI/ChatAI.css
@@ -1,11 +1,20 @@
 .chat-container {
+  display: flex;
     min-height: 75vh;
-    margin: 20px 0;
+    margin-top: 20px;
+    margin-bottom: 50px;
     width: 100%;
+    position : relative;
+
   }
-  
+  .home-container-2{
+    margin-top: 30px;
+    position : relative;
+    margin-bottom: 30px;
+  }
   /* * input section */
   .chat-input-container {
+    /* position: fixed; */
     background-color: #f5f5f5;
     display: flex;
     justify-content: center;
@@ -15,6 +24,11 @@
     width: 90%;
     gap: 1rem;
     margin: 0 auto;
+ 
+    position : absolute;
+    right : 0;
+    bottom: 0;
+    margin-bottom: 0%;
   }
   
   .chatai-textarea {
