--- a/client/src/pages/ChatAI/ChatAI.css
+++ b/client/src/pages/ChatAI/ChatAI.css
@@ -1,5 +1,6 @@
 .chat-container {
-  display: flex;
+  /* display: flex; */
+  align-items: center;
     min-height: 75vh;
     margin-top: 20px;
     margin-bottom: 50px;
