Feat: Responsive design

--- a/client/src/components/RightSidebar/RightSidebar.css
+++ b/client/src/components/RightSidebar/RightSidebar.css
@@ -1,74 +1,90 @@
 .right-sidebar{
+    margin-left: 24px;
     float: right;
     width: 300px;
     margin: 40px 0px 15px 24px;
     font-size: 15px;
 }
 
-.widget{
+.widget {
     margin-top: 10px;
-    box-shadow: 3px 3px 10px rgb(0 0 0 / 5%),
+    box-shadow: 3px 3px 10px rgb(0 0 0 / 5%), 
     -3px -3px 10px rgb(0 0 0 / 5%);
-}
-
-.widget img {
-    width: 15px;
-    ;
-}
-
-.widget h4{
+  }
+  
+  .widget h4 {
     background-color: #fbf3d5;
     margin: 0%;
     padding: 15px;
     border: solid 1px #f1e5bc;
     font-size: 13px;
-}
-
-.right-sidebar-div-1{
+  }
+  
+  .right-sidebar-div-1 {
     background-color: #fdf7e2;
     padding: 15px;
     border: solid 1px #f1e5bc;
-}
-
-.right-sidebar-div-1 .right-sidebar-div-2{
+  }
+  
+  .right-sidebar-div-1 .right-sidebar-div-2 {
     display: flex;
     align-items: flex-start;
-    justify-content: left;
-}
-
-.right-sidebar-div-1 .right-sidebar-div-2 p{
+    justify-content: space-evenly;
+  }
+  
+  .right-sidebar-div-1 .right-sidebar-div-2 p {
     padding-left: 10px;
     margin-top: 0%;
     font-size: 13px;
-}
-
-.widget-tags{
+  }
+  
+  .widget-tags {
     margin-top: 40px;
-    box-shadow: 3px 3px 10px rgb(0 0 0 / 5%),
-    -3px -3px 10px rgb(0 0 0 / 5%);
-}
-
-.widget-tags h4{
+    box-shadow: 3px 3px 10px rgb(0 0 0 / 5%), -3px -3px 10px rgb(0 0 0 / 5%);
+  }
+  
+  .widget-tags h4 {
     margin: 0%;
     padding: 15px;
     background-color: #f8f9f9;
     border: solid 1px #e3e6e8;
     font-size: 13px;
-}
-
-.widget-tags-div{
+  }
+  
+  .widget-tags-div {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: space-evenly;
     border: solid 1px #e3e6e8;
     padding: 10px;
-}
-
-.widget-tags-div p{
+  }
+  
+  .widget-tags-div p {
     padding: 5px;
     background-color: #e1ecf4;
     color: #39739d;
     border-radius: 2px;
     font-size: 13px;
-}
+  }
+  
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) {
+    .right-sidebar {
+      display: none;
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .right-sidebar {
+      width: 200px;
+    }
+  }
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1020px) {
+    .right-sidebar {
+      width: 300px;
+    }
+  }
