--- a/client/src/pages/Auth/Auth.css
+++ b/client/src/pages/Auth/Auth.css
@@ -8,7 +8,7 @@
 }
 
 .auth-container-1{
-    padding: 20px;
+    padding: 10px;
     margin-right: 30px;
 }
 
@@ -16,7 +16,7 @@
     padding: 20px 30px;
 }
 
-.auth-container-2{
+.auth-container-2 {
     min-width: 20%;
     display: flex;
     flex-direction: column;
@@ -32,46 +32,39 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    box-shadow: 0 10px 25px rgb(0 0 0 / 5%),
-     0 20px 48px rgb(0 0 0 / 5%),
-     0 1px 4px rgb(0 0 0 / 10%);
+    box-shadow: 0 10px 25px rgb(0 0 0 / 5%), 
+    0 20px 48px rgb(0 0 0 / 5%),
+    0 1px 4px rgb(0 0 0 / 10%);
 }
 
-.auth-container-2 form label input{
+.auth-container-2 form p {
+    word-wrap: break-word;
+  }
+  
+  .auth-container-2 form label input {
     padding: 10px;
-    width: calc( 100% - 30px );
+    width: calc(100% - 5px);
     border: solid 1px #0000003e;
     font-size: 13px;
-}
-
-.auth-container-2 form label:nth-child(1) h4,
-.auth-container-2 form label:nth-child(2) h4,
-.auth-container-2 form label:nth-child(3) h4{
+  }
+  
+  .auth-container-2 form label:nth-child(1) h4,
+  .auth-container-2 form label:nth-child(2) h4,
+  .auth-container-2 form label:nth-child(3) h4 {
     margin-bottom: 5px;
     margin-top: 10px;
-}
-
-.auth-container-2 form label:nth-child(4){
+  }
+  
+  .auth-container-2 form label:nth-child(4) {
     display: flex;
-}
-
-.auth-container-2 form label:nth-child(4) input{
+  }
+  
+  .auth-container-2 form label:nth-child(4) input {
     width: 15%;
     margin: 13px 0px;
-}
-
-.labelCheck{
-    align-items: center;
-}
-input[type=checkbox] {
-    position: relative;
-      cursor: pointer;
-      display: block;
-      position: relative;
-      width: 20px;
-      height: 20px;
-}
-.auth-btn{
+  }
+  
+  .auth-btn {
     margin-top: 10px;
     padding: 10px 5px;
     background-color: #009dff;
@@ -82,18 +75,43 @@ input[type=checkbox] {
     transition: 0.2s;
     font-size: 13px;
     font-weight: 500;
-}
-.auth-btn:hover{
+  }
+  
+  .auth-btn:hover {
     background-color: #018ce3;
-}
-.checkBox {
-    background-color: aquamarine;
-}
-.handle-switch-btn{
+  }
+  
+  .handle-switch-btn {
     background-color: transparent;
     color: #007ac6;
     border: none;
     font-size: 13px;
     cursor: pointer;
+  }
+  
+/* * phones, 600px and down */
+@media only screen and (max-width: 600px) {
+  .auth-section {
+    flex-direction: column;
+    padding: 0 5%;
+    gap: 2rem;
+  }
+
+  .auth-container-1 {
+    padding: 20px;
+    margin-right: 0;
+  }
 }
 
+/* * portrait tablets and large phones, 600px and up */
+@media only screen and (min-width: 600px) {
+  .auth-section {
+    padding: 0 5%;
+    gap: 2rem;
+  }
+
+  .auth-container-1 {
+    padding: 20px;
+    margin-right: 0;
+  }
+}
